sync platform folder

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -15,6 +15,7 @@ width=device-width, target-densitydpi=device-dpi" />
 			<meta name="msapplication-tap-highlight" content="no" />
 		    <meta name="format-detection" content="telephone=no" /> 
         <!-- END: Metadata -->
+        <!-- END: Metadata -->
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -56,16 +57,18 @@ width=device-width, target-densitydpi=device-dpi" />
 
 		<div class="pages drop-shadow">
 			<section class="home visible"></section>
-			<article class="pg pg-discover" data-page="discover"></article>
-			<article class="pg pg-portfolio" data-page="portfolio"></article>
-			<article class="pg pg-develop" data-page="develop"></article>
+<!-- 			<article class="pg pg-discover" data-page="discover"></article>
+ -->			<article class="pg pg-portfolio" data-page="portfolio"></article>
+<!-- 			<article class="pg pg-develop" data-page="develop"></article>
 			<article class="pg pg-develop-home" data-page="develop-home"></article>
 			<article class="pg pg-study-home-a" data-page="study-home-a"></article>
 				<article class="pg pg-disease-state-a" data-page="disease-state-a"></article>
 				<article class="pg pg-rationale-a" data-page="rationale-a"></article>
 				<article class="pg pg-study-design-a1" data-page="study-design-a1"></article>
 			<article class="pg pg-study-home-b" data-page="study-home-b"></article>
-
+				<article class="pg pg-disease-state-b" data-page="disease-state-b"></article>
+				<article class="pg pg-rationale-b" data-page="rationale-b"></article>
+				<article class="pg pg-study-design-b1" data-page="study-design-b1"></article> -->
 
 			<section class="mod mod-video"></section>
 			<!-- <article class="mod mod-web-view"></article> -->
@@ -90,7 +93,8 @@ width=device-width, target-densitydpi=device-dpi" />
 		<div id="modal-dialog" class="modal-container" title="" style="display:none;">
 		    <iframe id="modal-frame" width="100%" height="100%" sandbox="allow-same-origin"></iframe>
 		</div>
-		<script type="text/javascript" src="cordova.js"></script>
+
+				<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript">
 			app.initialize();
