--- a/www/page-snippets/portfolio.html
+++ b/www/page-snippets/portfolio.html
@@ -47,7 +47,7 @@
 				  &lt;h3&gt; Jakafi&lt;sup&gt;&reg;&lt;/sup&gt; (ruxolitinib) &lt;/h3&gt; 
 				  &lt;a onclick='window.open('https://clinicaltrials.gov/ct2/show/NCT00952289?term=NCT00952289&rank=1', '_system');' class='modal-showx' &gt; &lt;b&gt; NCT00952289: &lt;/b&gt; Controlled MyeloFibrosis Study With Oral JAK Inhibitor Treatment: The COMFORT-I Trial&lt;/a&gt; 
 
-				  &lt;a href='https://clinicaltrials.gov/ct2/show/NCT00934544?term=NCT00934544&rank=1' class='modal-show' &gt; &lt;b&gt; NCT00934544: &lt;/b&gt; Controlled Myelofibrosis Study With Oral Janus-associated Kinase (JAK) Inhibitor Treatment-II: The COMFORT-II Trial &lt;/a&gt;
+				  &lt;a href='https://clinicaltrials.gov/ct2/show/NCT00934544?term=NCT00934544&rank=1' class='modal-showx' &gt; &lt;b&gt; NCT00934544: &lt;/b&gt; Controlled Myelofibrosis Study With Oral Janus-associated Kinase (JAK) Inhibitor Treatment-II: The COMFORT-II Trial &lt;/a&gt;
 
 				  &lt;a href='https://clinicaltrials.gov/ct2/show/NCT01243944?term=NCT01243944&rank=1' class='modal-show' &gt;  &lt;b&gt; NCT01243944: &lt;/b&gt; Study of Efficacy and Safety in Polycythemia Vera Subjects Who Are Resistant to or Intolerant of Hydroxyurea: JAK Inhibitor INC424 (INCB018424) Tablets Versus Best Available Care: (The RESPONSE Trial) &lt;/a&gt;
 
